--- a/src/style.css
+++ b/src/style.css
@@ -23,14 +23,6 @@ a:hover {
   color: #535bf2;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
 
 body {
   margin: 0;
@@ -69,7 +61,9 @@ button:focus-visible {
 }
 
 #app {
-  max-width: 1280px;
+  width: 800px;
+  /*height: 1280px;*/
+ /* background-image: url(".\assets\images\BackgroundCubes.png");*/
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
@@ -84,6 +78,6 @@ button:focus-visible {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #ececec;
   }
 }
