--- a/src/style.css
+++ b/src/style.css
@@ -62,8 +62,9 @@ button:focus-visible {
 
 #app {
   width: 800px;
-  /*height: 1280px;*/
- /* background-image: url(".\assets\images\BackgroundCubes.png");*/
+  height: 1280px;
+  background-image: url("./assets/images/BackgroundCubes.png");
+  background-size: cover;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
