--- a/src/style.css
+++ b/src/style.css
@@ -17,16 +17,16 @@
 #app {
   width: 800px;
   height: 1280px;
-  /*background-image: url("./assets/images/BackgroundCubes.png");*/
+  background-image: url("./assets/images/SIGN UP PAGE.png");
   background-size: cover;
   margin: 0 auto;
   padding: 0rem;
   text-align: center;
 }
 
-@media screen and (min-width: 1920px) {
+@media screen and (min-width: 800px) {
   :root {
-    color: #213547;
+    color: red;
     background-color: #ffffff;
   }
   a:hover {
@@ -37,7 +37,7 @@
   }
   #app {
     width: 100%;
-    height: auto;
+    height: 100vh;
   }
   
 }
