--- a/src/style.css
+++ b/src/style.css
@@ -25,7 +25,7 @@
   text-align: center;
 }
 
-@media screen and (min-width: 800px) {
+@media screen and (max-width: 800px) {
   :root {
     color: red;
     background-color: #ffffff;
