--- a/src/style.css
+++ b/src/style.css
@@ -43,10 +43,10 @@
   
 }
 
-@media screen and (min-width: 2421px) {
+@media screen and (min-width: 800px) {
   #app {
-    width: 1728px;
-    height: 1117px;
+    width: 100%;
+    height: 100vh;
   }
 }
 
