--- a/src/style.css
+++ b/src/style.css
@@ -62,6 +62,10 @@
   margin-top: 50px;
   }
 
+  .input_field::placeholder {
+    color: white;
+  }
+
   /* Label don't have an account yet... */
   .label_registration {
     font-family: "Inter";
@@ -84,6 +88,36 @@
     margin-top: 2vw; 
     box-sizing: border-box;
     width: 600px;
+  }
+
+  .input_field{
+    color: white;
+  }
+
+  .tab_box{
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-bottom: 2px solid white;
+    font-size: 18px;
+    font-weight: 600;
+    height: 100px;
+  }
+
+  /* Home logo used in all Vues except MENU */
+  .home_logo {
+    position: absolute;
+    top: 111px;
+    left: 0px;
+    width: 140px;
+    height: 100px;
+    border-top-right-radius: 46px;
+    border-bottom-right-radius: 46px;
+  }
+
+  .content_box{
+    padding: 50px;
   }
 
 @media screen and (min-width: 2421px) {
