--- a/src/style.css
+++ b/src/style.css
@@ -46,6 +46,7 @@
   border-radius: 35px;
   font-size: 40px;
   background-color: white;
+  cursor: pointer;
 }
 
 /* Text box for sign up and login Vues */
