--- a/src/style.css
+++ b/src/style.css
@@ -113,6 +113,7 @@
     left: 0px;
     width: 140px;
     height: 100px;
+    background-color: white;
     border-top-right-radius: 46px;
     border-bottom-right-radius: 46px;
   }
