--- a/src/style.css
+++ b/src/style.css
@@ -79,7 +79,7 @@
     flex-direction: column;
     align-items: center;
   }
-
+  /*Main rectangle*/
   .form_container {
     background-color: transparent;
     border: 4px solid white; 
@@ -94,7 +94,7 @@
   .input_field{
     color: white;
   }
-
+  /*Section which contains the title of the main rectangle*/
   .tab_box{
     width: 100%;
     display: flex;
@@ -117,7 +117,7 @@
     border-top-right-radius: 46px;
     border-bottom-right-radius: 46px;
   }
-
+  /*Section which contains the content of the main rectangle*/
   .content_box{
     padding: 50px;
   }
